--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 body {
     margin: 60px auto;
     width: 70%;
+    background-image: url('/back.jpg');
+    background-repeat: no-repeat;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
