--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
-    background-image: url('/back.jpg');
+    background-image: url('back.jpg');
     background-repeat: no-repeat;
 }
 nav ul, footer ul {
