--- a/main.css
+++ b/main.css
@@ -1,45 +1,179 @@
+html, body {
+text-align: center;
+}
+p {text-align: left;}
+
 body {
-    margin: 60px auto;
-    width: 70%;
-    background-image: url('back.jpg');
-    background-repeat: no-repeat;
+	margin: 0;
+	padding: 0;
+	background: #000000;
+	font-family:  Arial, Helvetica, sans-serif;
+	font-size: 13px;
+  background: #26476E url(background.png);
 }
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
+*
+{
+  margin: 0 auto 0 auto;
+ text-align:left;}
+
+#page
+{
+  margin: 0 auto 0 auto; 
+  display: block; 
+  height:auto;
+  position: relative; 
+  overflow: hidden; 
+  width: 753px;
+text-align:center;
 }
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
+
+#header
+{
+margin-top:25px;
+padding-top:63px;
+padding-left:30px;
+padding-right:30px;
+background-image:url(header.png);
+background-repeat:no-repeat;
+height:122px;
+width:753px;
+overflow:hidden;
 }
-a {
-    text-decoration: none;
-    color: #999;
+
+#header h1, #header h2
+{
+margin-left:0px;
+width:693px;
+position:relative;
+color:#000000;
+text-align:center;
+font-size:15px;
+font-weight:bold;
+font-family:Arial, Helvetica, sans-serif;
+clear:both;
 }
-a:hover {
-    text-decoration: underline;
+
+#contact
+{
+text-align:center;
+font-size:15px;
+
+
 }
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+
+#header h1
+{
+margin-left:0px;
+width:693px;
+position:relative;
+color:#26476E;
+font-size:30px;
+}
+
+
+
+#bar
+{
+background-image:url(bar.png);
+background-repeat:no-repeat;
+height:53px;
+width:750px;
+padding-bottom:15px;
+text-align:center;
+margin:0 auto 0 auto;
+}
+
+#bar ul {
+	margin: 0px auto 0px auto;
+	padding: 0px;
+	list-style-type: none;
+	height: 74px;
+	text-align:center;
+}
+#bar ul li , #bar ul li a, #bar ul li a:visited{
+	margin: 0px;
+	padding: 0px;
+	height: 30px;
+	overflow: hidden;
+	display: inline;
+	text-align:center;
+	line-height:65px;
+	color:#26476E;
+	padding-left:6px;
+	padding-right:6px;
+}
+
+#bar ul li a:hover
+{
+color:#000000;
+text-decoration:underline;
+
+}
+
+
+
+
+
+
+
+
+
+.contentTitle
+{
+width:700px;
+height:44px;
+margin-top:20px;
+margin-left:0px;
+margin-right:25px;
+background-image:url(tab_back.png);
+background-repeat:no-repeat;
+
+}
+
+.contentTitle h1
+{
+margin-left:21px;
+padding-top:8px;
+font-size:21px;
+font-weight:bold;
+letter-spacing:-1px;
+color:#9f8060;
+}
+
+
+.contentText
+{
+width:680px;
+padding-left:30px;
+padding-right:30px;
+font-size:13px;
+line-height:30px;
+}
+
+a
+{
+text-decoration:none;
+}
+
+a:hover
+{
+border-bottom:1px dotted #F1F3F8;
+}
+
+
+#footer {
+width: 750px;
+height:20px;
+text-align:center;
+font-size:9px;
+padding-top:20px;
+}
+
+html, body {
+text-align: center;
 }
 p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
+margin:7px;
+text-align: left;
+text-align:justify;
 }
