--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 	background: #000000;
 	font-family:  Arial, Helvetica, sans-serif;
 	font-size: 13px;
-  background: #26476E url(back.jpg);
+  background: #26476E url(back1.jpg);
 }
 *
 {
